# enterprise-rag

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DAILY_CHECKLIST.md  Dockerfile  EXECUTION_PLAN.md  README.md  TODO.md  pyproject.toml
.audit-venv-ci/: pyvenv.cfg
.audit-venv-ci/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
.audit-venv.bak/Scripts/: activate  activate.bat
.github/: EXECUTION_TRACKER.md
.github/workflows/: ci.yml  codeql.yml  post-deploy-smoke.yml  security.yml
data/: track_compare.csv  track_compare.json
data/sample_documents/: azure-ai-foundry.html  langgraph-guide.txt  openai-deployment.txt
docs/: ARCHITECTURE_DECISIONS.md  DAY_1.md  DAY_10.md  DAY_2.md  DAY_3.md  DAY_3_SUMMARY.md  DAY_4.md  DAY_5.md  DAY_6.md  DAY_7.md  DAY_8.md  DAY_9.md  DEV_ENV_REBUILD.md  INGESTION_OPTIONS_REFERENCE.md  LINKEDIN_CONTENT_TODO.md  MULTI_AGENT_PATTERNS.md  TRACK_COMPARISON.md  WHY_EXPLICIT_INGESTION_PIPELINE.md
infra/: aca.bicep  deploy.ps1  dev.bicepparam  main.bicep
infra/modules/: ai-foundry.bicep  documentintelligence.bicep  keyvault.bicep  managed-identity.bicep  openai.bicep  search.bicep  storage.bicep
scripts/: get_mi_id.py  grant_search_openai_role.py  patch_index_semantic.py  patch_index_vectorizer.py
src/: compare_tracks.py  evaluation_gate.py  test_ingestion_e2e.py
src/api/: __init__.py  app.py
src/azure_clients/: __init__.py  factory.py
src/config/: __init__.py  logging_config.py  settings.py
src/cost_model/: __init__.py  estimator.py
src/foundry/: __init__.py  evaluation.py  rag_agent.py
src/guardrails/: __init__.py  circuit_breaker.py  content_safety.py  input_validator.py
src/ingestion/: __init__.py  chunking.py  document_parser.py  embeddings.py  ingestion_pipeline.py  search_indexer.py
src/langgraph_agent/: agent.py  react_agent.py  search_tool.py  state.py
src/multi_agent/: __init__.py  planner.py  specialists.py  state.py
src/observability/: __init__.py  tracing.py
tests/: test_cost_model.py  test_evaluation_gate.py  test_settings.py
tests/api/: test_app.py
tests/foundry/: test_rag_agent.py
tests/guardrails/: test_circuit_breaker.py  test_content_safety.py  test_input_validator.py
tests/langgraph_agent/: test_react_agent.py
tests/multi_agent/: test_planner.py
tests/observability/: test_tracing.py
